--- a/locales/en.json
+++ b/locales/en.json
@@ -1386,6 +1386,9 @@
     "views.OnChainAddresses.sortBy.balanceDescending": "Balance (descending)",
     "views.OnChainAddresses.createAddress": "Create address",
     "views.OnChainAddresses.changeAddresses": "Change addresses",
+    "views.Swaps.title": "Swaps",
+    "views.Swaps.create": "Create atomic swap",
+    "views.Swaps.initiate": "Initiate swap",
     "androidNotification.lndRunningBackground": "LND is running in the background",
     "androidNotification.shutdown": "Shutdown"
 }
