added explainer inside buttons

--- a/locales/en.json
+++ b/locales/en.json
@@ -511,9 +511,11 @@
     "views.NodeQRScanner.error": "Scanned QR code was not a valid Lightning Node",
     "views.Intro.whatIsZeus": "What is Zeus?",
     "views.Intro.quickStart": "Quick start",
+    "views.Intro.quickStartExplainer": "Your own node on the phone",
     "views.Intro.lightningOnboarding": "Learn about lightning onboarding",
     "views.Intro.lightningLiquidity": "Learn about lightning liquidity",
     "views.Intro.advancedSetUp": "Advanced set-up",
+    "views.Intro.advancedSetUpExplainer": "Connect to a remote node",
     "views.Intro.creatingWallet": "Zeus is creating your wallet.",
     "views.Intro.choosingPeers": "ZEUS is choosing your peers.",
     "views.Intro.carousel1.title": "Payments you can trust",
