--- a/locales/en.json
+++ b/locales/en.json
@@ -125,6 +125,7 @@
     "general.sorting": "Sorting",
     "general.count": "Count",
     "general.experimental": "Experimental",
+    "general.defaultNodeNickname": "My Lightning Node",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
