Swaps: Localize strings

--- a/locales/en.json
+++ b/locales/en.json
@@ -97,6 +97,8 @@
     "general.hash": "Hash",
     "general.kind": "Kind",
     "general.content": "Content",
+    "general.create": "Create",
+    "general.enter": "Enter",
     "general.lightningInvoice": "Lightning invoice",
     "general.or": "or",
     "general.reset": "Reset",
@@ -1289,5 +1291,13 @@
     "views.OnChainAddresses.changeAddresses": "Change addresses",
     "views.Swaps.title": "Swaps",
     "views.Swaps.create": "Create atomic swap",
-    "views.Swaps.initiate": "Initiate swap"
+    "views.Swaps.initiate": "Initiate swap",
+    "views.SwapDetails.title": "Swap Details",
+    "views.SwapDetails.acceptZerpConf": "Accept Zero Conf",
+    "views.SwapDetails.expectedAmount": "Expected amount",
+    "views.SwapDetails.swapId": "Swap ID",
+    "views.SwapDetails.timeoutBlockHeight": "Timeout Block Height",
+    "views.SwapDetails.claimPublicKey": "Claim Public Key",
+    "views.SwapDetails.swapTree": "Swap Tree",
+    "views.SwapDetails.bip21": "BIP21"
 }
