--- a/locales/en.json
+++ b/locales/en.json
@@ -879,6 +879,7 @@
     "views.Settings.EmbeddedNode.compactDb": "Compact databases",
     "views.Settings.EmbeddedNode.compactDb.subtitle": "Whether the databases used within LND should automatically be compacted on startup. This is disabled by default because it increases startup time and requires additional disk space to be available during the compaction that is freed afterwards. In general compaction leads to smaller database files.",
     "views.Settings.EmbeddedNode.stopLndDeleteNeutrino": "Stop LND and delete Neutrino files",
+    "views.Settings.EmbeddedNode.stopLndDeleteNeutrino.subtitle": "Upon restart, blockchain header sync will start from scratch and will take several minutes to complete.",
     "views.Settings.EmbeddedNode.restoreChannelBackups": "Restore channel backups",
     "views.Settings.EmbeddedNode.restoreChannelBackups.restore": "Restore",
     "views.Settings.EmbeddedNode.restart": "Restart to take effect.",
