improved UX and error handling for wallet configuration

--- a/locales/en.json
+++ b/locales/en.json
@@ -128,6 +128,8 @@
     "general.experimental": "Experimental",
     "general.defaultNodeNickname": "My Lightning Node",
     "general.active": "Active",
+    "general.pastedInvalidData": "The pasted text contains characters we can't use here. Please check and try again.",
+    "general.invalidHost": "Invalid host. Please enter a valid host, or host:port.",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
@@ -253,6 +255,7 @@
     "views.Settings.WalletConfiguration.walletActive": "Wallet Active",
     "views.Settings.AddEditNode.scanLndconnect": "Scan lndconnect config",
     "views.Settings.AddEditNode.scanLnc": "Scan LNC QR from Lightning Terminal",
+    "views.Settings.AddEditNode.wrongLncPairingPhraseLength": "A Lightning Node Connect pairing phrase must contain exactly 10 words. Please check and try again.",
     "views.Settings.AddEditNode.scanCLightningRest": "Scan c-lightning-REST QR",
     "views.Settings.AddEditNode.scanBtcpay": "Scan BTCPay config",
     "views.Settings.AddEditNode.scanLndhub": "Scan LNDHub QR",
@@ -1115,6 +1118,7 @@
     "error.failureReasonIncorrectPaymentDetails": "Payment failed: Payment details incorrect (unknown payment hash, invalid amount or invalid final CLTV delta).",
     "error.failureReasonIncorrectPaymentDetailsKeysend": "The receiving node might not accept keysend payments.",
     "error.failureReasonInsufficientBalance": "Insufficient local balance",
+    "error.invalidMacaroon": "Invalid macaroon. Please check that you've entered the correct macaroon for this node.",
     "pos.views.Wallet.PosPane.noOrders": "No orders open at the moment. To send to ZEUS, mark order as 'Other Payment Type' with a note that includes 'Zeus', 'BTC', or 'Bitcoin'",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "No orders open at the moment",
     "pos.views.Wallet.PosPane.noOrdersPaid": "No orders have been paid yet",
