--- a/locales/en.json
+++ b/locales/en.json
@@ -1092,7 +1092,7 @@
     "error.failureReasonTimeout": "There are more routes to try, but the payment timeout was exceeded.",
     "error.failureReasonNoRoute": "No route found",
     "error.failureReasonError": "A non-recoverable error has occured",
-    "error.failureReasonIncorrectPaymentDetails": "Payment details incorrect (unknown hash, invalid amt or invalid final cltv delta)",
+    "error.failureReasonIncorrectPaymentDetails": "Payment failed: Payment details incorrect (unknown payment hash, invalid amount or invalid final CLTV delta). If this was a keysend payment, the receiving node might not accept keysend.",
     "error.failureReasonInsufficientBalance": "Insufficient local balance",
     "pos.views.Wallet.PosPane.noOrders": "No orders open at the moment. To send to ZEUS, mark order as 'Other Payment Type' with a note that includes 'Zeus', 'BTC', or 'Bitcoin'",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "No orders open at the moment",
