--- a/locales/en.json
+++ b/locales/en.json
@@ -64,6 +64,7 @@
     "general.true": "True",
     "general.false": "False",
     "general.force": "Force",
+    "general.immediate": "Immediate",
     "general.proceed": "Proceed",
     "general.fiatFetchError": "Error fetching exchange rates",
     "general.iUnderstand": "I understand",
@@ -1003,6 +1004,10 @@
     "views.BumpFee.targetConfs": "Target confirmations",
     "views.BumpFee.success": "Successfully bumped fee!",
     "views.BumpFee.error": "Error bumping fee",
+    "views.BumpFee.budget": "Budget (sats)",
+    "views.BumpFee.budget.explainer1": "The max amount in sats that can be used as the fees. Setting this value greater than the input's value may result in CPFP - one or more wallet utxos will be used to pay the fees specified by the budget.",
+    "views.BumpFee.budget.explainer2": "If not set, for new inputs, by default 50% of the input's value will be treated as the budget for fee bumping; for existing inputs, their current budgets will be retained.",
+    "views.BumpFee.immediate.explainer": "Whether this input will be swept immediately. When set to true, the sweeper will sweep this input without waiting for the next batch.",
     "views.Sync.title": "Syncing wallet",
     "views.Sync.currentBlockHeight": "Current block height",
     "views.Sync.tip": "Tip",
