--- a/locales/en.json
+++ b/locales/en.json
@@ -1004,6 +1004,11 @@
     "views.BumpFee.targetConfs": "Target confirmations",
     "views.BumpFee.success": "Successfully bumped fee!",
     "views.BumpFee.error": "Error bumping fee",
+    "views.BumpFee.outpoint.explainer1": "An outpoint is a reference to a particular output of a previous transaction. It consists of two parts:",
+    "views.BumpFee.outpoint.explainer2": "1) Transaction ID (txid): This is a unique identifier for a specific transaction on the Bitcoin blockchain.",
+    "views.BumpFee.outpoint.explainer3": "2) Output Index (vout): This denotes which specific output of the referenced transaction is being spent.",
+    "views.BumpFee.outpoint.explainer4": "The two are combined with a : character, for example: a1075db55d416d3ca199f55b6084e2115b9345e16c5cf302fc80e9d5fbf5d48d:0",
+    "views.BumpFee.outpoint.explainer5": "This is the first output in this transaction, as the output index starts at 0. The second output has vout 1, etc.",
     "views.BumpFee.budget": "Budget (sats)",
     "views.BumpFee.budget.explainer1": "The max amount in sats that can be used as the fees. Setting this value greater than the input's value may result in CPFP - one or more wallet utxos will be used to pay the fees specified by the budget.",
     "views.BumpFee.budget.explainer2": "If not set, for new inputs, by default 50% of the input's value will be treated as the budget for fee bumping; for existing inputs, their current budgets will be retained.",
