--- a/locales/en.json
+++ b/locales/en.json
@@ -1001,6 +1001,7 @@
     "views.Mortals.title": "Mortals",
     "views.BumpFee.title": "Speed up transaction",
     "views.BumpFee.titleAlt": "Speed up channel open",
+    "views.BumpFee.titleClose": "Speed up channel close",
     "views.BumpFee.targetConfs": "Target confirmations",
     "views.BumpFee.success": "Successfully bumped fee!",
     "views.BumpFee.error": "Error bumping fee",
@@ -1013,6 +1014,7 @@
     "views.BumpFee.budget.explainer1": "The max amount in sats that can be used as the fees. Setting this value greater than the input's value may result in CPFP - one or more wallet utxos will be used to pay the fees specified by the budget.",
     "views.BumpFee.budget.explainer2": "If not set, for new inputs, by default 50% of the input's value will be treated as the budget for fee bumping; for existing inputs, their current budgets will be retained.",
     "views.BumpFee.immediate.explainer": "Whether this input will be swept immediately. When enabled, the sweeper will sweep this input without waiting for the next batch.",
+    "views.BumpFee.startingFee": "Starting fee (sat/vbyte)",
     "views.Sync.title": "Syncing wallet",
     "views.Sync.currentBlockHeight": "Current block height",
     "views.Sync.tip": "Tip",
