Refactor contacts/improve behaviour:
- Add ContactInputField component for reusable field inputs
- Enhance "add extra field" logic and button disable conditions
- Add compactContactArrays helper function to prevent saving empty additional fields/gaps
- Fix localeString typo
- Fix MobX array out of bounds warnings with proper array access checks

--- a/locales/en.json
+++ b/locales/en.json
@@ -941,7 +941,7 @@
     "views.Settings.AddContact.pubkey": "Public key",
     "views.Settings.AddContact.nip05": "NIP-05",
     "views.Settings.AddContact.nostrNpub": "Nostr npub",
-    "views.Settings.AddContact.addExtraField": "add extra field",
+    "views.Settings.AddContact.addExtraField": "Add extra field",
     "views.Settings.AddContact.saveContact": "Save Contact",
     "views.Settings.AddContact.deleteContact": "Delete Contact",
     "views.Settings.Contacts.multipleAddresses": "multiple addresses",
