replace passphrase with password

--- a/locales/en.json
+++ b/locales/en.json
@@ -481,8 +481,8 @@
     "views.LNDConnectConfigQRScanner.error": "Error fetching lndconnect config",
     "views.LncQRScanner.error": "Error parsing LNC config",
     "views.LNDHubQRScanner.text": "Scan a LNDHub or Blue Wallet QR code",
-    "views.Lockscreen.incorrect": "Incorrect Passphrase",
-    "views.Lockscreen.enterPassphrase": " Enter Passphrase",
+    "views.Lockscreen.incorrectPassword": "Incorrect Password",
+    "views.Lockscreen.enterPassword": " Enter Password",
     "views.Lockscreen.login": "Log In",
     "views.Lockscreen.pin": "Enter PIN",
     "views.Lockscreen.incorrectPin": "Incorrect PIN",
