--- a/locales/en.json
+++ b/locales/en.json
@@ -127,6 +127,7 @@
     "general.count": "Count",
     "general.experimental": "Experimental",
     "general.defaultNodeNickname": "My Lightning Node",
+    "general.active": "Active",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
@@ -402,7 +403,6 @@
     "views.Channel.fundedBy": "Funded by",
     "views.Channel.unannounced": "Unannounced",
     "views.Channel.status": "Status",
-    "views.Channel.active": "Active",
     "views.Channel.inactive": "Inactive",
     "views.Channel.private": "Private",
     "views.Channel.totalReceived": "Total Received",
@@ -834,7 +834,6 @@
     "views.Settings.POS.Product.noProductsDefined": "No products defined yet",
     "views.Settings.POS.Product.sku": "SKU",
     "views.Settings.POS.Product.price": "Price",
-    "views.Settings.POS.Product.active": "Active",
     "views.Settings.POS.saveProduct": "Save product",
     "views.Settings.POS.deleteProduct": "Delete product",
     "views.Settings.POS.confirmDelete": "Confirm delete",
