--- a/locales/en.json
+++ b/locales/en.json
@@ -129,6 +129,7 @@
     "general.defaultNodeNickname": "My Lightning Node",
     "general.active": "Active",
     "general.unknown": "Unknown",
+    "general.retry": "Retry",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
