--- a/locales/en.json
+++ b/locales/en.json
@@ -454,6 +454,13 @@
     "views.Channel.Total.offline": "Total offline",
     "views.Channel.zeroConf": "Zero conf",
     "views.Channel.commitmentType": "Commitment Type",
+    "views.Channel.lease.expiresIn": "Expires in",
+    "views.Channel.lease.outboundChannel": "Outbound channel",
+    "views.Channel.lease.lspDiscretion": "May be closed at LSP's discretion",
+    "views.Channel.lease.lspDiscretion.explainer1": "The Lightning Service Provider (LSP) reserves the right to close your channel at any time. Channels with large balances pushed to the LSP's side, are more likely to be closed.",
+    "views.Channel.lease.lspDiscretion.explainer2": "If you would like to ensure your channel remains open, consider purchasing a channel lease.",
+    "views.Channel.lease.purchaseLease": "Purchase channel lease",
+    "views.Channel.lease.extendLease": "Extend channel lease",
     "views.UTXOs.CoinControl.noUTXOs": "No UTXOs available",
     "views.EditFee.mainText": "Edit network fee",
     "views.EditFee.fastestFee": "Fastest fee",
