LSPS7: wire up Create Order view

--- a/locales/en.json
+++ b/locales/en.json
@@ -1081,6 +1081,8 @@
     "views.LSPS1.serviceInfoText2": "If you don't want to wait for on-chain confirmation, you can use our just-in-time channel service. The JIT service will create a 0-conf channel of the amount you specify plus 100k sats of inbound (receiving capacity).",
     "views.LSPS1.useJit": "Use just-in-time service",
     "views.LSPS1.spec": "Spec",
+    "views.LSPS7.channelExtensionBlocks": "Number of blocks to extend channel lease by",
+    "views.LSPS7.serviceInfoText1": "This service allows you to extend the duration of a purchased channel lease, or purchase a channel lease for a channel you have opened to the LSP.",
     "components.UTXOPicker.modal.title": "Select UTXOs to use",
     "components.UTXOPicker.modal.description": "Select the UTXOs to be used in this operation. You may want to only use specific UTXOs to preserve your privacy.",
     "components.UTXOPicker.modal.set": "Set UTXOs",
@@ -1297,6 +1299,7 @@
     "time.3mo": "3 mo",
     "time.6mo": "6 mo",
     "time.12mo": "12 mo",
+    "time.max": "Max",
     "components.AlertModal.zeusDetected": "ZEUS has detected the following issues:",
     "components.AlertModal.highZombieCount": "High zombie channel count",
     "components.AlertModal.zombieExplainer": "Zombie channels indicate stale data on your downloaded network graph.",
