--- a/locales/en.json
+++ b/locales/en.json
@@ -1290,7 +1290,10 @@
     "time.minutes": "Minutes",
     "time.hours": "Hours",
     "time.days": "Days",
+    "time.day": "Day",
     "time.weeks": "Weeks",
+    "time.months": "Months",
+    "time.month": "Month",
     "time.10min": "10 min",
     "time.1H": "1H",
     "time.1D": "1D",
