LSPS7: Create Order + Get Order

--- a/locales/en.json
+++ b/locales/en.json
@@ -1035,6 +1035,7 @@
     "views.Sync.currentBlockHeight": "Current block height",
     "views.Sync.tip": "Tip",
     "views.Sync.numBlocksUntilSynced": "Number of blocks until synced",
+    "views.LSPS1.type": "In advance channel purchase",
     "views.LSPS1.pubkeyAndHostNotFound": "Node pubkey and host are not set",
     "views.SyncRecovery.title": "Recovering wallet",
     "views.LSPS1.timeoutError": "Did not receive response from server",
@@ -1070,6 +1071,7 @@
     "views.LSPS1.fundingOutpoint": "Funding outpoint",
     "views.LSPS1.purchaseInbound": "Purchase inbound channel",
     "views.LSPS1.lsps1Spec": "LSPS1 API and spec",
+    "views.LSPS1.lspOrders": "LSP Orders",
     "views.LSPS1.lsps1Orders": "LSPS1 Orders",
     "views.LSPS1.noOrdersError": "No orders are saved yet!",
     "views.LSPS1.showingPreviousState": "showing previous state!",
@@ -1081,7 +1083,15 @@
     "views.LSPS1.serviceInfoText2": "If you don't want to wait for on-chain confirmation, you can use our just-in-time channel service. The JIT service will create a 0-conf channel of the amount you specify plus 100k sats of inbound (receiving capacity).",
     "views.LSPS1.useJit": "Use just-in-time service",
     "views.LSPS1.spec": "Spec",
+    "views.LSPS7.type": "Channel lease extension",
     "views.LSPS7.channelExtensionBlocks": "Number of blocks to extend channel lease by",
+    "views.LSPS7.extensionExpiryBlocks": "Extension expiry blocks",
+    "views.LSPS7.newChannelExpiryBlock": "New channel expiry block",
+    "views.LSPS7.maxChannelExtensionExpiryBlocks": "Max channel extension expiry blocks",
+    "views.LSPS7.expirationBlock": "Current expiration block",
+    "views.LSPS7.originalOrderId": "Original order ID",
+    "views.LSPS7.originalService": "Original service",
+    "views.LSPS7.extensionOrderIds": "Extension Order IDs",
     "views.LSPS7.serviceInfoText1": "This service allows you to extend the duration of a purchased channel lease, or purchase a channel lease for a channel you have opened to the LSP.",
     "components.UTXOPicker.modal.title": "Select UTXOs to use",
     "components.UTXOPicker.modal.description": "Select the UTXOs to be used in this operation. You may want to only use specific UTXOs to preserve your privacy.",
