Localize channel statuses

--- a/locales/en.json
+++ b/locales/en.json
@@ -130,6 +130,14 @@
     "general.active": "Active",
     "general.unknown": "Unknown",
     "general.retry": "Retry",
+    "channel.status.good": "Good",
+    "channel.status.stable": "Stable",
+    "channel.status.unstable": "Unstable",
+    "channel.status.offline": "Offline",
+    "channel.status.opening": "Opening",
+    "channel.status.closing": "Closing",
+    "channel.expirationStatus.expiring": "Expiring soon",
+    "channel.expirationStatus.expired": "Expired",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
