--- a/locales/en.json
+++ b/locales/en.json
@@ -1094,9 +1094,9 @@
     "views.LSPS7.type": "Channel lease extension",
     "views.LSPS7.channelExtensionBlocks": "Number of blocks to extend channel lease by",
     "views.LSPS7.extensionExpiryBlocks": "Extension expiry blocks",
-    "views.LSPS7.newChannelExpiryBlock": "New channel expiry block",
     "views.LSPS7.maxChannelExtensionExpiryBlocks": "Max channel extension expiry blocks",
     "views.LSPS7.expirationBlock": "Current expiration block",
+    "views.LSPS7.proposedExpirationBlock": "Proposed expiration block",
     "views.LSPS7.originalOrderId": "Original order ID",
     "views.LSPS7.originalService": "Original service",
     "views.LSPS7.extensionOrderIds": "Extension Order IDs",
