--- a/locales/en.json
+++ b/locales/en.json
@@ -1267,6 +1267,15 @@
     "view.Settings.LSPServicesList.title": "LSP Services",
     "view.Settings.LSPServicesList.flow2": "Just-in-time channels",
     "view.Settings.LSPServicesList.lsps1": "Request channels in advance",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.seed": "Seed phrase",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.recoveryWindow": "Recovery window",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.recoveryWindow.explainer": "The number of keys to scan per derivation path.",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.sleepSeconds": "Seconds to wait between queries",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.sleepSeconds.explainer": "Use this to add a pause between queries if you get rate limited by the API.",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.sweepAddr": "Sweep address",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "Custom API URL",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Start sweep",
     "views.LspExplanation.text1": "Zeus is a self-custodial lightning wallet. In order to send or receive a lightning payment, you must open a lightning payment channel, which has a setup fee.",
     "views.LspExplanation.text2": "Once the channel is set up, you'll only have to pay normal network fees until your channel exhausts its capacity.",
     "views.LspExplanation.buttonText": "Learn more about liquidity",
