--- a/locales/en.json
+++ b/locales/en.json
@@ -128,6 +128,7 @@
     "general.experimental": "Experimental",
     "general.defaultNodeNickname": "My Lightning Node",
     "general.active": "Active",
+    "general.unknown": "Unkown",
     "restart.title": "Restart required",
     "restart.msg": "ZEUS has to be restarted before the new configuration is applied.",
     "restart.msg1": "Would you like to restart now?",
