sweepremoteclosed: add ability to use current wallet seed

--- a/locales/en.json
+++ b/locales/en.json
@@ -1267,6 +1267,9 @@
     "view.Settings.LSPServicesList.title": "LSP Services",
     "view.Settings.LSPServicesList.flow2": "Just-in-time channels",
     "view.Settings.LSPServicesList.lsps1": "Request channels in advance",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.seedType": "Seed type",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.currentWalletsSeed": "Current wallet's seed",
+    "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.externalWalletSeed": "External wallet seed",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.seed": "Seed phrase",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.recoveryWindow": "Recovery window",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.recoveryWindow.explainer": "The number of keys to scan per derivation path.",
