Tools: Add Activity Export Feature

--- a/locales/en.json
+++ b/locales/en.json
@@ -1017,8 +1017,14 @@
     "views.ActivityFilter.ampInvoices": "AMP invoices",
     "views.ActivityToCsv.title": "Download Activity",
     "views.ActivityToCsv.csvDownloaded": "CSV file has been downloaded",
+    "views.ActivityToCsv.csvDownloadFailed": "Failed to download CSV file",
     "views.ActivityToCsv.textInputPlaceholder": "File name (optional)",
     "views.ActivityToCsv.downloadButton": "Download CSV",
+    "views.activityExport.title": "Export CSV Data",
+    "views.activityExport.noData": "No data to export",
+    "views.activityExport.exportPayments": "Export Payments",
+    "views.activityExport.exportInvoices": "Export Invoices",
+    "views.activityExport.exportTransactions": "Export Transactions",
     "views.Routing.RoutingEvent.sourceChannel": "Source Channel",
     "views.Routing.RoutingEvent.destinationChannel": "Destination Channel",
     "views.Olympians.title": "Olympians",
