LSPS7: improve extension block number labels

--- a/locales/en.json
+++ b/locales/en.json
@@ -1097,8 +1097,8 @@
     "views.LSPS1.spec": "Spec",
     "views.LSPS7.type": "Channel lease extension",
     "views.LSPS7.channelExtensionBlocks": "Number of blocks to extend channel lease by",
-    "views.LSPS7.extensionExpiryBlocks": "Extension expiry blocks",
-    "views.LSPS7.maxChannelExtensionExpiryBlocks": "Max channel extension expiry blocks",
+    "views.LSPS7.extensionExpiryBlocks": "Number of blocks channel lease is extended by",
+    "views.LSPS7.maxChannelExtensionExpiryBlocks": "Max number of blocks channel lease can be extended by",
     "views.LSPS7.expirationBlock": "Current expiration block",
     "views.LSPS7.proposedExpirationBlock": "Proposed expiration block",
     "views.LSPS7.originalOrderId": "Original order ID",
