Added date filter modal and the option to download complete data

--- a/locales/en.json
+++ b/locales/en.json
@@ -1025,6 +1025,10 @@
     "views.activityExport.exportPayments": "Export Payments",
     "views.activityExport.exportInvoices": "Export Invoices",
     "views.activityExport.exportTransactions": "Export Transactions",
+    "views.activityExport.fromDate": "From Date (Start Date)",
+    "views.activityExport.toDate": "To Date (End Date)",
+    "views.activityExport.dateRange": "Select Date Range:",
+    "views.activityExport.downloadCompleteData": "Download Complete Data",
     "views.Routing.RoutingEvent.sourceChannel": "Source Channel",
     "views.Routing.RoutingEvent.destinationChannel": "Destination Channel",
     "views.Olympians.title": "Olympians",
