added share feature (Receive screen only for now), enhanced CollapsedQR with icon-only mode
Co-authored-by: myxmaster <sebi.mueller.83@gmail.com>

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,7 @@
     "general.close": "Close",
     "general.hide": "Hide",
     "general.copy": "Copy",
+    "general.share": "Share",
     "general.goBack": "Go Back",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
