--- a/locales/en.json
+++ b/locales/en.json
@@ -1013,6 +1013,7 @@
     "views.ActivityFilter.lightningPayments": "Lightning payments",
     "views.ActivityFilter.onChainPayments": "On-chain payments",
     "views.ActivityFilter.minimumAmount": "Minimum Amount (sats)",
+    "views.ActivityFilter.memo": "Memo/Note",
     "views.ActivityFilter.inTransit": "In transit payments",
     "views.ActivityFilter.isFailed": "Failed payments",
     "views.ActivityFilter.standardInvoices": "Standard invoices",
