Improved error handling

--- a/locales/en.json
+++ b/locales/en.json
@@ -1020,17 +1020,19 @@
     "views.ActivityToCsv.csvDownloadFailed": "Failed to download CSV file",
     "views.ActivityToCsv.textInputPlaceholder": "File name (optional)",
     "views.ActivityToCsv.downloadButton": "Download CSV",
-    "views.activityExport.title": "Export CSV Data",
-    "views.activityExport.noData": "No data to export",
-    "views.activityExport.exportPayments": "Export Payments",
-    "views.activityExport.exportInvoices": "Export Invoices",
-    "views.activityExport.exportTransactions": "Export Transactions",
-    "views.activityExport.fromDate": "From Date (Start Date)",
-    "views.activityExport.toDate": "To Date (End Date)",
-    "views.activityExport.dateRange": "Select Date Range:",
-    "views.activityExport.downloadCompleteData": "Download Complete Data",
-    "views.activityExport.explainerAndroid": "Downloaded CSV files can be found in Files > Downloads.",
-    "views.activityExport.explaineriOS": "Downloaded CSV files can be found in the Files app under the ZEUS folder.",
+    "views.ActivityExport.title": "Export CSV Data",
+    "views.ActivityExport.exportPayments": "Export Payments",
+    "views.ActivityExport.exportInvoices": "Export Invoices",
+    "views.ActivityExport.exportTransactions": "Export Transactions",
+    "views.ActivityExport.fromDate": "From Date (Start Date)",
+    "views.ActivityExport.toDate": "To Date (End Date)",
+    "views.ActivityExport.dateRange": "Select Date Range:",
+    "views.ActivityExport.downloadCompleteData": "Download Complete Data",
+    "views.ActivityExport.explainerAndroid": "Downloaded CSV files can be found in Files > Downloads.",
+    "views.ActivityExport.explaineriOS": "Downloaded CSV files can be found in the Files app under the ZEUS folder.",
+    "views.ActivityExport.noDataAvailableForSelection": "No activity data is available for the selected type.",
+    "views.ActivityExport.noDataForSelectedDates": "No records found in the selected date range. Try a different date.",
+    "views.ActivityExport.noValidDataForDownload": "There is no valid data available for download.",
     "views.Routing.RoutingEvent.sourceChannel": "Source Channel",
     "views.Routing.RoutingEvent.destinationChannel": "Destination Channel",
     "views.Olympians.title": "Olympians",
