locales: update Start date - End date

--- a/locales/en.json
+++ b/locales/en.json
@@ -1026,8 +1026,8 @@
     "views.ActivityExport.exportPayments": "Export Payments",
     "views.ActivityExport.exportInvoices": "Export Invoices",
     "views.ActivityExport.exportTransactions": "Export Transactions",
-    "views.ActivityExport.fromDate": "From Date (Start Date)",
-    "views.ActivityExport.toDate": "To Date (End Date)",
+    "views.ActivityExport.fromDate": "Start date",
+    "views.ActivityExport.toDate": "End date",
     "views.ActivityExport.dateRange": "Select Date Range:",
     "views.ActivityExport.downloadCompleteData": "Download Complete Data",
     "views.ActivityExport.explainerAndroid": "Downloaded CSV files can be found in Files > Downloads.",
