--- a/locales/en.json
+++ b/locales/en.json
@@ -1302,5 +1302,6 @@
     "views.SwapDetails.timeoutBlockHeight": "Timeout Block Height",
     "views.SwapDetails.claimPublicKey": "Claim Public Key",
     "views.SwapDetails.swapTree": "Swap Tree",
-    "views.SwapDetails.bip21": "BIP21"
+    "views.SwapDetails.bip21": "BIP21",
+    "views.SwapDetails.refund": "refund"
 }
