--- a/locales/en.json
+++ b/locales/en.json
@@ -210,7 +210,6 @@
     "views.Accounts.fetchTxFees": "Fetch on-chain transaction fees",
     "views.EditFee.title": "Edit network fee",
     "views.EditFee.titleDisplayOnly": "Transaction fees",
-    "views.CLightningRestQRScanner.error": "Error fetching c-lightning-REST config",
     "views.LnurlPay.LnurlPay.amount": "Amount to pay",
     "views.LnurlPay.LnurlPay.comment": "Comment",
     "views.LnurlPay.LnurlPay.confirm": "Confirm",
@@ -266,10 +265,8 @@
     "views.Settings.WalletConfiguration.walletActive": "Wallet Active",
     "views.Settings.AddEditNode.scanLndconnect": "Scan lndconnect config",
     "views.Settings.AddEditNode.scanLnc": "Scan LNC QR from Lightning Terminal",
-    "views.Settings.AddEditNode.scanCLightningRest": "Scan c-lightning-REST QR",
     "views.Settings.AddEditNode.scanBtcpay": "Scan BTCPay config",
     "views.Settings.AddEditNode.scanLndhub": "Scan LNDHub QR",
-    "views.Settings.AddEditNode.scanSpark": "Scan Spark QR",
     "views.Settings.WalletConfiguration.deleteWallet": "Delete Wallet Config",
     "views.Settings.AddEditNode.tapToConfirm": "Tap to confirm",
     "views.Settings.WalletConfiguration.duplicateWallet": "Duplicate Wallet Config",
@@ -296,8 +293,6 @@
     "views.Settings.Security.deleteDuressPIN": "Delete Duress PIN",
     "views.Settings.Security.scramblePIN": "Scramble PIN numbers",
     "views.Settings.Security.loginBackground": "Require login after app returns from background",
-    "views.SparkQRScanner.text": "Scan a Spark QR code",
-    "views.SparkQRScanner.error": "Error fetching Spark config",
     "views.ImportAccount.title": "Import account",
     "views.ImportAccount.extendedPubKey": "Extended Public Key (xpub, zpub, tpub, etc.)",
     "views.ImportAccount.masterKeyFingerprint": "Master Key Fingerprint",
@@ -1146,7 +1141,7 @@
     "stores.InvoicesStore.errorCreatingInvoice": "Error creating invoice",
     "stores.InvoicesStore.errorGeneratingAddress": "Error generating new address",
     "stores.InvoicesStore.zeroAmountLndhub": "LNDHub instance might not support zero-amount invoices",
-    "stores.SettingsStore.btcPayImplementationSupport": "Sorry, we currently only support BTCPay instances using lnd or c-lightning",
+    "stores.SettingsStore.btcPayImplementationSupport": "Sorry, we currently only support BTCPay instances using LND",
     "stores.SettingsStore.btcPayFetchConfigError": "Error fetching BTCPay configuration",
     "stores.SettingsStore.olympianFetchError": "Error fetching Olympians",
     "stores.SettingsStore.lndhubSuccess": "Successfully created LNDHub account. Record the username and password somewhere so you can restore your funds if something happens to your device. Then hit Save Wallet Config to continue.",
