--- a/locales/en.json
+++ b/locales/en.json
@@ -133,6 +133,7 @@
     "general.unknown": "Unknown",
     "general.retry": "Retry",
     "general.response": "Response",
+    "general.notifications": "Notifications",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
