feat: view for refund swaps

--- a/locales/en.json
+++ b/locales/en.json
@@ -1526,6 +1526,8 @@
     "views.Swaps.title": "Swaps",
     "views.Swaps.create": "Create atomic swap",
     "views.Swaps.initiate": "Initiate swap",
+    "views.Swaps.refundSwap": "Refund swap",
+    "views.Swaps.initiateRefund": "Initiate Refund",
     "views.SwapDetails.title": "Swap Details",
     "views.SwapDetails.acceptZerpConf": "Accept Zero Conf",
     "views.SwapDetails.expectedAmount": "Expected amount",
