--- a/locales/en.json
+++ b/locales/en.json
@@ -1295,6 +1295,8 @@
     "views.Swaps.title": "Swaps",
     "views.Swaps.create": "Create atomic swap",
     "views.Swaps.initiate": "Initiate swap",
+    "views.Swaps.refundSwap": "Refund swap",
+    "views.Swaps.initiateRefund": "Initiate Refund",
     "views.SwapDetails.title": "Swap Details",
     "views.SwapDetails.acceptZerpConf": "Accept Zero Conf",
     "views.SwapDetails.expectedAmount": "Expected amount",
@@ -1303,5 +1305,4 @@
     "views.SwapDetails.claimPublicKey": "Claim Public Key",
     "views.SwapDetails.swapTree": "Swap Tree",
     "views.SwapDetails.bip21": "BIP21",
-    "views.SwapDetails.refund": "refund"
 }
