--- a/locales/en.json
+++ b/locales/en.json
@@ -792,6 +792,8 @@
     "views.Settings.Invoices.title": "Invoices settings",
     "views.Settings.Invoices.showCustomPreimageField": "Show custom preimage field",
     "views.Settings.Invoices.displayAmountOnInvoice": "Display requested amount on invoice",
+    "views.Settings.Invoices.memoExplainer": "A default memo to use for your invoices.",
+    "views.Settings.Invoices.receiverNameExplainer": "A receiver name that is added to all of your invoices, to help payers identify who they are paying.",
     "views.Settings.Channels.title": "Channels settings",
     "views.Settings.Channels.lsps1ShowPurchaseButton": "Show channel purchase button",
     "views.Settings.Privacy.blockExplorer": "Default Block explorer",
