--- a/locales/en.json
+++ b/locales/en.json
@@ -1167,6 +1167,7 @@
     "error.failureReasonIncorrectPaymentDetailsKeysend": "The receiving node might not accept keysend payments.",
     "error.failureReasonInsufficientBalance": "Insufficient local balance",
     "error.invalidMacaroon": "Invalid macaroon. Please check that you've entered the correct macaroon for this node.",
+    "error.invalidResponse": "Received invalid response data from the server",
     "pos.views.Wallet.PosPane.noOrders": "No orders open at the moment. To send to ZEUS, mark order as 'Other Payment Type' with a note that includes 'Zeus', 'BTC', or 'Bitcoin'",
     "pos.views.Wallet.PosPane.noOrdersStandalone": "No orders open at the moment",
     "pos.views.Wallet.PosPane.noOrdersPaid": "No orders have been paid yet",
