--- a/locales/en.json
+++ b/locales/en.json
@@ -134,6 +134,7 @@
     "general.retry": "Retry",
     "general.response": "Response",
     "general.approximately": "Approximately",
+    "general.ecash": "Ecash",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
@@ -1304,6 +1305,12 @@
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.apiUrl": "API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.customApiUrl": "Custom API URL",
     "views.Settings.EmbeddedNode.Chantools.Sweepremoteclosed.start": "Start sweep",
+    "views.Settings.Ecash.title": "Ecash settings",
+    "views.Settings.Ecash.enableEcash": "Enable Cashu ecash",
+    "views.Settings.Ecash.enableEcash.subtitle1": "Cashu is a Chaumian ecash protocol built for Bitcoin. It's a custodial solution but with better privacy than a traditional account.",
+    "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
+    "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
+    "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
     "views.LspExplanation.text1": "Zeus is a self-custodial lightning wallet. In order to send or receive a lightning payment, you must open a lightning payment channel, which has a setup fee.",
     "views.LspExplanation.text2": "Once the channel is set up, you'll only have to pay normal network fees until your channel exhausts its capacity.",
     "views.LspExplanation.buttonText": "Learn more about liquidity",
