--- a/locales/en.json
+++ b/locales/en.json
@@ -1530,6 +1530,7 @@
     "views.SwapDetails.swapTree": "Swap Tree",
     "views.SwapDetails.bip21": "BIP21",
     "views.SwapDetails.refund": "Refund",
+    "views.SwapSettings.customHost": "Enter a custom host",
     "androidNotification.lndRunningBackground": "LND is running in the background",
     "androidNotification.shutdown": "Shutdown"
 }
