--- a/locales/en.json
+++ b/locales/en.json
@@ -1296,6 +1296,8 @@
     "views.Swaps.create": "Create atomic swap",
     "views.Swaps.initiate": "Initiate swap",
     "views.Swaps.refundSwap": "Refund swap",
+    "views.Swaps.cooperative": "Cooperative refund",
+    "views.Swaps.infoText": "Use cooperative, only if the selected service is operating",
     "views.Swaps.enterRefundAddress": "Enter the onchain address to receive refund",
     "views.Swaps.initiateRefund": "Initiate Refund",
     "views.SwapDetails.title": "Swap Details",
