Cashu: set preferred mint

--- a/locales/en.json
+++ b/locales/en.json
@@ -137,6 +137,7 @@
     "general.approximately": "Approximately",
     "general.selfCustody": "Self-custody",
     "general.ecash": "Ecash",
+    "general.preferred": "Preferred",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
@@ -1409,6 +1410,8 @@
     "views.Mints.noMints": "No mints added yet",
     "views.Cashu.Mint.supportedNuts": "Supported Nuts",
     "views.Cashu.Mint.removeMint": "Remove mint",
+    "views.Cashu.Mint.preferredMint": "This is your preferred mint",
+    "views.Cashu.Mint.setPreferred": "Set preferred",
     "views.Cashu.Mint.restoration": "Recovering your Cashu proofs and balances",
     "views.Cashu.Mint.restorationKeyset": "Restoring keyset",
     "views.Cashu.Mint.checkForExistingBalances": "Check for existing balances",
